fixed font family paht

--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 @font-face
 {
 	font-family: FreakGrotesque Next;
-	src: url('/asset/font/FREAKGrotesk-next.otf');
+	src: url('/FREAKGrotesk-next.otf');
 }
 html {
 	background-attachment: fixed;
