--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 @font-face
 {
-	font-family: FreakGrotesque Next;
-	src: url('./FREAKGrotesk-next.otf');
+	font-family: 'FreakGrotesque Next';
+	src: url('web-cv/FREAKGrotesk-next.otf');
 	font-weight: normal;
   font-style: normal;
 }
