--- a/css/marquee.css
+++ b/css/marquee.css
@@ -6,3 +6,37 @@
   text-decoration: underline;
   color: white;
 }
+
+.marquee__container {
+  position: fixed;
+  width: inherit;
+  top: 0;
+  left: 0;
+  height: 40px;
+  overflow: hidden;
+  background-color: black!important;
+  border-bottom: 0.15em solid #000000;
+  z-index: 10000000;
+  width: 150%;
+  text-align: left;
+  padding: 8px;
+}
+
+.marquee {
+    white-space: nowrap;
+    overflow: hidden;
+    box-sizing: border-box;
+    margin-top: 4px;
+    font-size: 1.75em;
+    font-family: "FreakGrotesque Next", sans-serif;
+    font-weight: bold;
+  	color: white;
+}
+.marquee__text {
+    padding-left: 100%;
+    animation: marquee 20s linear infinite;
+}
+@keyframes marquee {
+    0%   { transform: translate(0, 0); }
+    100% { transform: translate(-250%, 0); }
+}
