--- a/css/services.css
+++ b/css/services.css
@@ -1,25 +1,39 @@
-.service__container {
-	display: grid;
-	grid-template-columns: 16% 84%;
-	margin: 32px;
-	border: 1px solid rgba(255, 255, 255, 0.2);
-
+.services {
+	margin-top: 64px;
+}
+.services__title {
+  margin: 0 120px 32px;
 }
 .services__container {
-	display: grid;
-	grid-template-columns: 50% 50%;
-	margin: 96px;
-	-webkit-box-align: start;
-	    -ms-flex-align: start;
-	        align-items: start;
-
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: start;
+    margin: 0 120px;
+}
+.service__container {
+    display: flex;
+    flex-direction: column;
+    margin: 8px;
+    align-content: center;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    align-items: center;
+    padding: 32px;
+}
+.service__text-container {
+	text-align: center;
+}
+.service__icon {
+    width: 5em;
+    margin: 0 0 32px;
 }
 .service__text {
-	font-size: 1.4em;
-	font-family: "FreakGrotesque Next", sans-serif;
-	color: white;
-	margin-bottom: 16px;
-	line-height: 1.4;
+    font-size: 1.2em;
+    font-family: "FreakGrotesque Next", sans-serif;
+    color: white;
+    margin-bottom: 16px;
+    line-height: 1.4;
 }
 .service__title {
 	font-size: 1.6em;
@@ -27,8 +41,4 @@
 	color: white;
 	text-decoration: underline;
 	margin-bottom: 12px;
-}
-
-.services__title {
-	margin: 0 120px;
 }
