--- a/css/services.css
+++ b/css/services.css
@@ -12,6 +12,15 @@
     align-items: start;
     margin: 0 120px;
 }
+@media screen
+  and (min-device-width: 1200px)
+  and (max-device-width: 1600px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (min-resolution: 192dpi) {
+		.services__container {
+		    grid-template-columns: 50% 50%;
+		}
+}
 .service__container {
     display: flex;
     flex-direction: column;
