--- a/css/services.css
+++ b/css/services.css
@@ -1,3 +1,4 @@
+/* RETINA display */
 @media screen
   and (min-device-width: 1600px)
   and (-webkit-min-device-pixel-ratio: 2)
@@ -16,7 +17,22 @@
 		}
 }
 
-
+/* NON-RETINA display */
+	@media screen
+	and (min-device-width: 1200px)
+	and (max-device-width: 1600px)
+	and (-webkit-min-device-pixel-ratio: 1) {
+		.services__container {
+		    grid-template-columns: 50% 50%;
+		}
+	}
+	@media screen
+	  and (min-device-width: 1600px)
+	  and (-webkit-min-device-pixel-ratio: 1) {
+			.services__container {
+					grid-template-columns: 25% 25% 25% 25%;
+			}
+	}
 
 .services {
 	margin-top: 64px;
