--- a/css/services.css
+++ b/css/services.css
@@ -1,6 +1,7 @@
 /* RETINA display */
 @media screen
   and (min-device-width: 1600px)
+	and (max-device-width: 4000px)
   and (-webkit-min-device-pixel-ratio: 2)
   and (min-resolution: 192dpi) {
 		.services__container {
