--- a/css/services.css
+++ b/css/services.css
@@ -2,8 +2,7 @@
 @media screen
   and (min-device-width: 1600px)
 	and (max-device-width: 4000px)
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (min-resolution: 192dpi) {
+  and (-webkit-min-device-pixel-ratio: 2){
 		.services__container {
 				grid-template-columns: 25% 25% 25% 25%;
 		}
@@ -11,8 +10,7 @@
 @media screen
   and (min-device-width: 1200px)
   and (max-device-width: 1600px)
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (min-resolution: 192dpi) {
+  and (-webkit-min-device-pixel-ratio: 2){
 		.services__container {
 		    grid-template-columns: 50% 50%;
 		}
