--- a/css/services.css
+++ b/css/services.css
@@ -1,6 +1,14 @@
 /* RETINA display */
 
 @media screen
+  and (min-device-width: 1650px)
+  and (-webkit-min-device-pixel-ratio: 2){
+		.services__container {
+		    grid-template-columns: 25% 25% 25% 25%;
+		}
+}
+
+@media screen
   and (min-device-width: 1200px)
   and (max-device-width: 1600px)
   and (-webkit-min-device-pixel-ratio: 2){
@@ -18,6 +26,16 @@
 		    grid-template-columns: 50% 50%;
 		}
 	}
+/* IPAD */
+
+	@media only screen
+  and (min-device-width: 768px)
+  and (max-device-width: 1024px)
+  and (-webkit-min-device-pixel-ratio: 1) {
+		.services__container {
+		    grid-template-columns: 50% 50%;
+		}
+}
 
 
 .services {
@@ -32,7 +50,7 @@
     -ms-flex-align: start;
     align-items: start;
     margin: 0 120px;
-		grid-template-columns: 25% 25% 25% 25%;
+		grid-template-columns: 50% 50%;
 }
 
 
