--- a/css/services.css
+++ b/css/services.css
@@ -2,7 +2,8 @@
 
 @media screen
   and (min-device-width: 1650px)
-  and (-webkit-min-device-pixel-ratio: 2){
+  and (-webkit-min-device-pixel-ratio: 2)
+	and (min-resolution: 192dpi){
 		.services__container {
 		    grid-template-columns: 25% 25% 25% 25%;
 		}
