--- a/css/services.css
+++ b/css/services.css
@@ -38,6 +38,15 @@
 		}
 }
 
+@media only screen
+and (min-device-width: 768px)
+and (max-device-width: 1024px)
+and (-webkit-min-device-pixel-ratio: 2) {
+	.services__container {
+			grid-template-columns: 100%;
+	}
+}
+
 
 .services {
 	margin-top: 64px;
