--- a/css/services.css
+++ b/css/services.css
@@ -49,52 +49,81 @@
 
 
 
-
-/* RETINA display */
-/*
-@media screen
-  and (min-device-width: 1650px)
-  and (-webkit-min-device-pixel-ratio: 2)
-	and (min-resolution: 192dpi){
-		.services__container {
-		    grid-template-columns: 25% 25% 25% 25%;
-		}
-} */
-
-@media screen
-  and (min-device-width: 1200px)
-  and (max-device-width: 1600px)
-  and (-webkit-min-device-pixel-ratio: 2){
-		.services__container {
-		    grid-template-columns: 50% 50%;
-		}
-}
-
-/* NON-RETINA display */
-	@media screen
-	and (min-device-width: 1200px)
-	and (max-device-width: 1600px)
-	and (-webkit-min-device-pixel-ratio: 1) {
-		.services__container {
-		    grid-template-columns: 50% 50%;
-		}
-	}
-/* IPAD */
-
-	@media only screen
-  and (min-device-width: 768px)
-  and (max-device-width: 1024px)
-  and (-webkit-min-device-pixel-ratio: 1) {
-		.services__container {
-		    grid-template-columns: 100%;
-		}
-}
-
+/* Smartphones (portrait and landscape) ----------- */
 @media only screen
-and (min-device-width: 768px)
-and (max-device-width: 1024px)
-and (-webkit-min-device-pixel-ratio: 2) {
+and (min-device-width : 320px)
+and (max-device-width : 480px) {
 	.services__container {
-			grid-template-columns: 100%;
+		grid-template-columns: 100%;
+	}
+}
+
+/* Smartphones (landscape) ----------- */
+@media only screen
+and (min-width : 321px) {
+	.services__container {
+		grid-template-columns: 100%;
+	}
+}
+
+/* Smartphones (portrait) ----------- */
+@media only screen
+and (max-width : 320px) {
+	.services__container {
+		grid-template-columns: 100%;
+	}
+}
+
+/* iPads (portrait and landscape) ----------- */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px) {
+	.services__container {
+		grid-template-columns: 50% 50%;
+	}
+}
+
+/* iPads (landscape) ----------- */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (orientation : landscape) {
+	.services__container {
+		grid-template-columns: 50% 50%;
+	}
+}
+
+/* iPads (portrait) ----------- */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (orientation : portrait) {
+	.services__container {
+		grid-template-columns: 50% 50%;
+	}
+}
+
+/* Desktops and laptops ----------- */
+@media only screen
+and (min-width : 1224px) {
+	.services__container {
+		grid-template-columns: 50% 50%;
+	}
+}
+
+/* Large screens ----------- */
+@media only screen
+and (min-width : 1824px) {
+	.services__container {
+		grid-template-columns: 25% 25% 25% 25%;
+	}
+}
+
+/* iPhone 4 ----------- */
+@media
+only screen and (-webkit-min-device-pixel-ratio : 1.5),
+only screen and (min-device-pixel-ratio : 1.5) {
+	.services__container {
+		grid-template-columns: 100%;
 	}
 }
