--- a/css/index.css
+++ b/css/index.css
@@ -160,7 +160,7 @@ a {
 .credits__container {
 	display: grid;
 	grid-template-columns: 50% 50%;
-	margin: 56px 0;
+	margin: 56px 0 120px;
 }
 .credits__text {
 	font-size: 1.2em;
