--- a/css/typography.css
+++ b/css/typography.css
@@ -9,3 +9,9 @@ h2 {
   font-family: "FreakGrotesque Next", sans-serif;
   color: white;
 }
+
+p {
+  	font-size: 1em;
+  	font-family: "FreakGrotesque Next", sans-serif;
+  	color: white;
+}
