--- a/css/index.css
+++ b/css/index.css
@@ -180,7 +180,7 @@ a {
 	flex-direction: column;
 	align-items: center;
 	align-content: center;
-	margin: 64px 0 96px;
+	margin: 64px;
 }
 
 .change-ss__container {
