--- a/css/showreel.css
+++ b/css/showreel.css
@@ -13,7 +13,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
-  justify-content: space-evenly;
+  justify-content: center;
   margin: 0 120px;
 }
 
