--- a/css/showreel.css
+++ b/css/showreel.css
@@ -20,7 +20,7 @@
 
 
 #image-1 {
-  background-image: url("web-cv/asset/showreel/1.png");
+  background-image: url("https://github.com/filippogianessi/web-cv/blob/master/asset/showreel/1.png");
   background-size: cover;
 }
 #image-2 {
