--- a/css/showreel.css
+++ b/css/showreel.css
@@ -29,3 +29,13 @@ and (min-width : 1224px) {
     max-height: 320px;
   }
 }
+
+/* iPads (portrait) ----------- */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (orientation : portrait) {
+  .showreel__container {
+    grid-template-columns: 100%;
+  }
+}
