--- a/css/showreel.css
+++ b/css/showreel.css
@@ -39,3 +39,11 @@ and (orientation : portrait) {
     grid-template-columns: 100%;
   }
 }
+
+/* Large screens ----------- */
+@media only screen
+and (min-width : 1600px) {
+  .showreel__image img{
+    max-height: 480px;
+  }
+}
