--- a/css/index.css
+++ b/css/index.css
@@ -248,5 +248,5 @@ a {
 	width: 100%;
 	height: 100%;
 	z-index: 9999;
-	background: url(./asset/loader/Preloader.gif) center no-repeat #fff;
+	background: url(../asset/loader/Preloader.gif) center no-repeat #fff;
 }
