trial page loading

--- a/css/index.css
+++ b/css/index.css
@@ -239,14 +239,19 @@ a {
 }
 
 
-.no-js #loader { display: none;  }
-.js #loader { display: block; position: absolute; left: 100px; top: 0; }
-.se-pre-con {
+.preloader {
 	position: fixed;
-	left: 0px;
-	top: 0px;
+	top: 0;
+	left: 0;
 	width: 100%;
 	height: 100%;
-	z-index: 9999;
-	background: url(../asset/loader/Preloader.gif) center no-repeat #fff;
+	background: black;
+	opacity: .9;
+	transition: 1s;
+	z-index: 99999;
+}
+
+
+.preloader.complete {
+	opacity: 0;
 }
