--- a/css/marquee.css
+++ b/css/marquee.css
@@ -16,7 +16,7 @@
   overflow: hidden;
   background-color: black!important;
   border-bottom: 0.15em solid #000000;
-  z-index: 10000000;
+  z-index: 1000;
   width: 150%;
   text-align: left;
   padding: 8px;
