--- a/css/services.css
+++ b/css/services.css
@@ -66,7 +66,7 @@ and (min-width : 1224px) {
 @media only screen
 and (min-width : 1600px) {
 	.services__container {
-		grid-template-columns: 25% 25% 25% 25%!important;
+		grid-template-columns: 240px auto auto auto auto!important;
 	}
 }
 
@@ -81,20 +81,27 @@ only screen and (min-device-pixel-ratio : 1.5) {
 
 
 .services {
-	margin: 0 0 80px;
+	margin: 96px 0 80px;
 }
 .services__title {
-  margin: 0 120px 32px;
+	font-family: IBMPlexSans-Bold;
+	font-size: 20px;
+	letter-spacing: 2px;
+	color: white;
+	grid-row: 1 / span 1;
+  align-self: start;
+  justify-self: start;
+  transform: rotate(270deg);
+	line-height: 240px;
+
 }
 .services__container {
     display: grid;
-    -webkit-box-align: start;
-    -ms-flex-align: start;
-    align-items: start;
     margin: 0 120px;
-		grid-template-columns: 25% 25% 25% 25%;
+		grid-template-columns: 240px auto auto auto auto;
 
 }
+
 
 
 .service__container {
@@ -102,16 +109,28 @@ only screen and (min-device-pixel-ratio : 1.5) {
     flex-direction: column;
     margin: 8px;
     align-content: center;
-    border: 1px solid rgba(255, 255, 255, 0.2);
+    border: 2px solid rgba(255, 255, 255, 0.2);
     align-items: center;
-    padding: 32px;
+    padding: 32px 32px 44px 32px;
+		border-radius: 8px;
+		min-width: 200px;
+		transition: all  .5s ease-out;
+
+}
+
+.service__container:hover {
+
+		border: 2px solid rgba(255, 255, 255, 0.6);
+		transform: translate(0, -4px);
+		background: rgba(255, 255, 255, 0.1);
+
 }
 .service__text-container {
 	text-align: center;
 }
 .service__icon {
     width: 5em;
-    margin: 0 0 32px;
+    margin: 0 0 16px;
 }
 .service__text {
     font-size: 1.2em;
@@ -126,4 +145,15 @@ only screen and (min-device-pixel-ratio : 1.5) {
 	color: white;
 	text-decoration: underline;
 	margin-bottom: 12px;
+}
+
+.service__button {
+	font-family: IBMPlexSans-Bold;
+	font-size: 16px;
+	color: #FFFFFF;
+	letter-spacing: 1px;
+	text-align: center;
+	border: 2px solid #FFFFFF;
+	padding: 16px 24px;
+	margin-top: 8px;
 }
